Fix navbar alignment once removed bootstrap components

--- a/src/app/views/navbar/navbar.component.css
+++ b/src/app/views/navbar/navbar.component.css
@@ -21,7 +21,7 @@
 
 #sidebar ul li a {
   text-align: center;
-  padding: 5px 15px;
+  padding: 5px 0;
   display: block;
   color: #FFFFFF;
 }
